--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "7DRL Challenge Game",
   "main": "index.js",
   "scripts": {
-    "watch": "tsc --watch",
-    "bundle": "rollup --config rollup.config.js --watch",
+    "bundle": "rollup -c rollup.config.js -w",
     "serve": "live-server --watch=./build",
-    "dev": "concurrently npm:watch npm:bundle npm:serve"
+    "dev": "concurrently npm:bundle npm:serve"
   },
   "author": "",
   "license": "MIT",
@@ -19,6 +18,8 @@
     "live-server": "^1.2.1",
     "rollup": "^1.4.0",
     "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-typescript2": "^0.19.3",
     "typescript": "^3.3.3333"
   }
 }
