--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "lit-element": "^2.0.1",
     "rot-js": "^2.0.3"
   },
   "devDependencies": {
